Updating vulnerable dependencies according to assessment report : 66a93e2d25a6da5714684317

--- a/src/BuildingBlocks/BuildingBlocks.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.csproj
@@ -97,7 +97,7 @@
         <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
         <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
         
-        <PackageReference Include="Jaeger" Version="1.0.3" />
+        <PackageReference Include="Jaeger" Version="99.99.99-ci0089" />
         <PackageReference Include="OpenTracing" Version="0.12.1" />
         <PackageReference Include="prometheus-net" Version="8.2.1" />
         <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
